--- a/projects.html
+++ b/projects.html
@@ -104,6 +104,17 @@
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
+           <section class="project-item centered">
+            <a style="height: 125px;">
+            <img src="facerecon.jpg" alt="additional projects" />
+            </a>
+            <h3>Face Recognition</h3>
+            <p>
+              Design project using React.
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
           <!-- End of Project block. -->
         </div>
       </section>
