--- a/about.html
+++ b/about.html
@@ -30,13 +30,13 @@
       <section class="profile">
         <div class="content-wrap">
           <!--<h1>Andres Monsalvo</h1>-->
-          <h2>Developer - Data Science - Engineer</h2>
+          <h2>Developer - Data Science - Mechanical Engineer</h2>
           <div>
           <p>
             As a developer, I specialize in creating front-end modular and
             scalable architectures as well as back-end applications. As a human
             being I am avid learner keen on improving designs and processes
-            through data analysis, data science, team collaboration and software applications.
+            through data analysis, data science, team collaboration, mechanical engineering and software applications.
           </p>
           </div>
           <div class="content-wrap">
