--- a/skills.html
+++ b/skills.html
@@ -42,6 +42,7 @@
                     <li>React</li>
                     <li>Express</li>
                     <li>Nodejs</li>
+                    <li>Asana</li>
                     
                   </ul>
                 </div>
