--- a/about.html
+++ b/about.html
@@ -30,7 +30,7 @@
       <section class="profile">
         <div class="content-wrap">
           <!--<h1>Andres Monsalvo</h1>-->
-          <h2>Developer - Data Science - Mechanical Engineer</h2>
+          <h2>Developer - Data Analytics / Science - Mechanical Engineer</h2>
           <div>
           <p>
             As a developer, I specialize in creating front-end modular and
