--- a/projects.html
+++ b/projects.html
@@ -31,7 +31,7 @@
 
       <section class="projects">
         <div class="content-wrap">
-          <h2 class="centered">Featured Projects</h2>
+          <h2 class="centered">Web Development Projects</h2>
           <!--<p>View selected projects below.</p>-->
 
           <!-- Copy the whole <section> block to add more projects. -->
@@ -115,6 +115,38 @@
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
+           <h2 class="centered">Machine Learning Projects</h2>
+          <!--<p>View selected projects below.</p>-->
+
+          <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item centered">
+            <a style="height: 181px;">
+            <img src="dogs.jpg" alt="breeds" class="centered" />
+            </a>
+            <h3>Dog Breeds Classification</h3>
+            <p>
+              AI project using Transfer Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds.
+              Tools included Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs for this deep learning project including the preparation of training, validation and test datasets.
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+          <!-- End of Project block. -->
+          <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item centered">
+            <a style="height: 181px;">
+            <img src="dogs.jpg" alt="breeds" class="centered" />
+            </a>
+            <h3>Dog Breeds Classification</h3>
+            <p>
+              AI project using Transfer Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds.
+              Tools included Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs for this deep learning project including the preparation of training, validation and test datasets.
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
           <!-- End of Project block. -->
         </div>
       </section>
