--- a/skills.html
+++ b/skills.html
@@ -65,14 +65,14 @@
                   <ul class="section-flex">
                     <li>Machine Learning</li>
                     <li>Matplotlib</li>
-                    <li>Tensorflow</li>
+                    <li>TensorFlow</li>
                     <li>Github</li>
                     <li>Responsive Design</li>
                     <li>Jira</li>
                     <li>CSS Animations</li>
                     <li>Agile</li>
                     <li>API</li>
-                    
+                    <li>Google Colab</li>                    
                   </ul>
                 </div>
         </div>
