addition of ML and AI projects

--- a/about.html
+++ b/about.html
@@ -30,13 +30,12 @@
       <section class="profile">
         <div class="content-wrap">
           <!--<h1>Andres Monsalvo</h1>-->
-          <h2>Developer - Data Analytics / Science - Mechanical Engineer</h2>
+          <h2>Web Developer - Machine Learning - Mechanical Engineer</h2>
           <div>
           <p>
             As a developer, I specialize in creating front-end modular and
-            scalable architectures as well as back-end applications. As a human
-            being I am avid learner keen on improving designs and processes
-            through data analysis, data science, team collaboration, mechanical engineering and software applications.
+            scalable architectures as well as back-end applications. As an engineer I am avid learner keen on improving designs and processes
+            through design, data analysis, data science, team collaboration, mechanical engineering and software applications.
           </p>
           </div>
           <div class="content-wrap">
@@ -54,18 +53,18 @@
           <h2 class="centered">Education</h2>
           <!-- Copy this whole <section> block to add more schools. -->
           <section>
+            <h3>University of Calgary</h3>
+            <p>Project Management Professional course, 2015</p>
+            <p>Master of Engineering, 2012</p>
+          </section>
+          <section>
             <h3>Bow Valley College - Calgary</h3>
             <p>Full Stack Software Development, 2020</p>
             <p>Web development, C# Programming and Databases.</p>
           </section>
           <section>
-            <h3>Lynda / Udemy Learning Courses</h3>
-            <p>HTML, CSS, Jira, Agile, Javascript, React, Machine Learning and Data Science</p>
-          </section>
-          <section>
-            <h3>University of Calgary</h3>
-            <p>Project Management Professional course, 2015</p>
-            <p>Master of Engineering, 2012</p>
+            <h3>Lynda / Udemy / Udacity Learning Courses</h3>
+            <p>HTML, CSS, Jira, Agile, Javascript, React, Machine Learning, Data Science and Artificial Intelligence</p>
           </section>
           <!-- End of School block. -->
         </div>
