--- a/projects.html
+++ b/projects.html
@@ -110,7 +110,7 @@
             </a>
             <h3>Face Recognition</h3>
             <p>
-              Design project using React.
+              Design project using React and Artificial Intelligence API for face recognition.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -121,12 +121,12 @@
           <!-- Copy the whole <section> block to add more projects. -->
           <section class="project-item centered">
             <a style="height: 181px;">
-            <img src="dogs.jpg" alt="breeds" class="centered" />
+            <img src="equipment.jpg" alt="bulldozer" class="centered" />
             </a>
-            <h3>Dog Breeds Classification</h3>
+            <h3>Sale Price Regression</h3>
             <p>
-              AI project using Transfer Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds.
-              Tools included Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs for this deep learning project including the preparation of training, validation and test datasets.
+              ML project to predict the future sale price of heavy construction machinery, given their characteristics and previous examples of how much similar equipment have been sold for.
+              Tools included Anaconda, Jupyter Notebooks, Pandas, Numpy, Matplotlib and Scikit Learn for this machine learning project including the preparation of training, validation and test datasets.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
