--- a/skills.html
+++ b/skills.html
@@ -122,11 +122,11 @@
               </p>
             </div>
             <div class="job-details">
-              <p>Machine Learning:</p>
+              <p>Machine Learning and AI:</p>
             </div>
             <div class="summary">
               <p>
-                Machine learning knowledge and enthusiast. Currently learning about this topic in a daily basis and can see myself more involved and working with an ML team in the near future.
+                Machine learning courses through Udemy and also AI Product Management through Udacity. Currently learning about these topics in a daily basis.
               </p>
             </div>
           </section>
