--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <section class="profile">
         <div class="content-wrap">
           <h1>ABOUT</h1>
-          <h2>Web Developer - AI - Mechanical Engineer</h2>
+          <h2>Full Stack Developer - Data Science - Mechanical Engineer</h2>
           <div>
-          <p>
-            As web developer, I specialize in creating front and back end applications. As Artificial Intelligence (AI) enthusiast I am learning all things machine learning and deep learning related. As engineer I am keen on improving designs and processes using design tools, data science, team collaboration and software applications. I devised this website with the goal of displaying past work, current projects and general information about myself in a more friendly way than typical resumes.
+          <p class="centered">
+            As web developer, I specialize in creating front and back end applications. As Artificial Intelligence (AI) enthusiast I completed a Machine Learning and Data Science bootcamp. Now I am learning about AI in Business and also Machine Learning for embedded systems. As engineer I am keen on improving designs and processes using computer tools and team collaboration. I devised this website with the goal of displaying past work, current projects and general information about myself in a more friendly way than a typical resume.
           </p>
           </div>
           <div class="content-wrap">
@@ -61,7 +61,7 @@
             </a>
             <h3>Simfoni Website</h3>
             <p>
-              Led a team of developers and collaborated in the creative design process using HTML5, CSS3, JavaScript, Node.js and SQL-Server database. Used collaboration tools as Github and project management tools as
+              Led a team of developers towards creating Simfoni's website and collaborated in the creative design process using HTML5, CSS3, JavaScript, Node.js and SQL-Server database. Used collaboration tools as Github and project management tools as
               Jira, while following Agile methodology.
             </p>
             <br/>
@@ -74,7 +74,7 @@
             </a>
             <h3>Andres' Github Profile</h3>
             <p>
-              Created my own GitHub profile pages using HTML, responsive, Advanced CSS Animations, Flexbox, Grid and JavaScript.
+              Created my own GitHub profile pages using HTML, responsive design, Advanced CSS Animations, Flexbox, Grid and JavaScript.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -86,7 +86,7 @@
             </a>
             <h3>Store's Website</h3>
             <p>
-              Created my own e-commerce store website using HTML, CSS techniques, CMS management and implemented API's through a 3rd party application.
+              Created my own e-commerce store website using HTML, CSS techniques, Content Management Systems - CMS, SEO Optimization and implemented API's through a 3rd party application.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -97,7 +97,7 @@
             </a>
             <h3>Cashier Calculator</h3>
             <p>
-              Design responsive application using HTML, CSS and JavaScript.
+              Design responsive application for a store calculator with the option of entering multiple products and quantities, using HTML, CSS and JavaScript.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -108,7 +108,7 @@
             </a>
             <h3>Bike Parks in Canada Website</h3>
             <p>
-              Design project using HTML, CSS, animations, responsive style and embedded video.
+              Design project using HTML, CSS, animations, responsive style and embedded videos.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -119,7 +119,7 @@
             </a>
             <h3>Robofriends</h3>
             <p>
-              Design project using React.
+              Design project using React components and containers.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -130,7 +130,7 @@
             </a>
             <h3>Face Recognition</h3>
             <p>
-              Design project using React and Artificial Intelligence API for face recognition.
+              Design project using React and Artificial Intelligence API for face recognition within uploaded images.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -145,8 +145,7 @@
             </a>
             <h3>Sale Price Regression</h3>
             <p>
-              ML project to predict the future sale price of heavy construction machinery, given their characteristics and previous examples of how much similar equipment have been sold for.
-              Tools included Anaconda, Jupyter Notebooks, Pandas, Numpy, Matplotlib and Scikit Learn for this machine learning project including the preparation of training, validation and test datasets.
+              ML project to predict the future sale price of heavy construction machinery, given their characteristics and previous examples of how much similar equipment have been sold for in the past. Tools used included Anaconda, Jupyter Notebooks, Pandas, Numpy, Matplotlib and Scikit Learn. Prepared training, validation and test datasets.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -160,8 +159,7 @@
             </a>
             <h3>Dog Breeds Classification</h3>
             <p>
-              AI project using Transfer Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds.
-              Tools included Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs for this deep learning project including the preparation of training, validation and test datasets.
+              AI project using Transfer Learning / Deep Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds. Tools used included Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
@@ -179,6 +177,7 @@
                 <div>
                   <ul class="section-flex">
                     <li>Frontend</li>
+                    <li>HTML</li>
                     <li>CSS3</li>
                     <li>JavaScript</li>
                     <li>React</li>
@@ -192,15 +191,15 @@
                 </div>
                 <div>
                   <ul class="section-flex">
-                    <li>Data Science</li>
+                    <li>Data Science / AI</li>
+                    <li>Python</li>
                     <li>Pandas</li>
-                    <li>AI</li>
                     <li>Machine Learning</li>
+                    <li>TinyML</li>
+                    <li>Embedded Systems</li>
                     <li>Matplotlib</li>
                     <li>TensorFlow</li>
-                    <li>Appen</li>
-                    <li>Data Analytics</li>
-                    <li>Python</li>
+                    <li>TensorFlow Lite</li>               
                     <li>Scikit-Learn</li>
                     <li>Google Colab</li>
                   </ul>
@@ -216,7 +215,8 @@
                     <li>Agile</li>
                     <li>Asana</li> 
                     <li>Jira</li>  
-                    <li>Trello</li>                 
+                    <li>Trello</li>
+
                   </ul>
                 </div>
         </div>
@@ -229,7 +229,7 @@
         <div class="content-wrap">
           <h2 class="centered">Work Experience</h2>
           <p>
-            Avid learner and designer, keen on product development and process optimization. Proactive, analytical, and collaborative with experience on projects and technical support.
+            Avid learner and designer, keen on product development, technology and process optimization. Proactive, analytical, and collaborative with experience on projects and technical support.
           </p>
 
           <!-- Copy this whole <section> block to add more jobs. -->
@@ -241,7 +241,7 @@
             <div class="summary">
               <p>
                 Researched, evaluated and implemented software applications to
-                improve designs, production and operational processes.
+                improve designs, products and operational processes.
               </p>
             </div>
             <div class="job-details">
@@ -261,8 +261,7 @@
               <p>
                 Collaborated with multi disciplinary teams responsible for product conceptual design,
                 and throughout complete project's life cycle, including initiation,
-                planning, execution, control / monitoring and closing
-                activities.
+                planning, execution, control / monitoring and closing activities.
               </p>
             </div>
             <div class="job-details">
@@ -270,7 +269,7 @@
             </div>
             <div class="summary">
               <p>
-                Machine learning, Data Science and AI In Business courses and scholarships. Currently learning about these topics in a daily basis.
+                Machine learning, Data Science, AI In Business, TinyML courses and scholarships.
               </p>
             </div>
           </section>
@@ -293,8 +292,8 @@
             <p>Web development, C# Programming and Databases.</p>
           </section>
           <section>
-            <h3>Lynda / Udemy / Udacity Learning Courses</h3>
-            <p>HTML, CSS, Jira, Agile, Javascript, React, Machine Learning, Data Science and Artificial Intelligence</p>
+            <h3> edX / Udemy / Udacity</h3>
+            <p>HTML, CSS, Jira, Agile, Javascript, React, Machine Learning, Data Science, Ai in Business, TinyML</p>
           </section>
           <!-- End of School block. -->
         </div>
