--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
       <section class="skills">
         <div class="content-wrap">
           <h2>hello world!</h2>
-          <h1>My name is Andres M.</h1>          
+          <h2>My name is Andres M</h2>          
       </section>
   
     <section>
@@ -31,11 +31,11 @@
       <!-- ******  ABOUT / INTRO  ******* -->
       <section class="profile">
         <div class="content-wrap">
-          <h1>ABOUT</h1>
-          <h2>Full Stack Developer - Data Science - Mechanical Engineer</h2>
+          <h2>ABOUT</h2>
+          <h3>Full Stack Software Developer - Machine Learning - Mechanical Engineer</h3>
           <div>
           <p class="centered">
-            As web developer, I specialize in creating front and back end applications. As Artificial Intelligence (AI) enthusiast I completed a Machine Learning and Data Science bootcamp. Now I am learning about AI in Business and also Machine Learning for embedded systems. As engineer I am keen on improving designs and processes using computer tools and team collaboration. I devised this website with the goal of displaying past work, current projects and general information about myself in a more friendly way than a typical resume.
+            As software developer, I specialize in creating front and back end applications. As Artificial Intelligence (AI) enthusiast I completed a Machine Learning and Data Science bootcamp. Now I am learning about AI for Business and Machine Learning for embedded systems. As engineer I am keen on improving designs and processes using computer tools and team collaboration. I devised this website with the goal of displaying past work, current projects and general information about myself in a more friendly way than a typical resume.
           </p>
           </div>
           <div class="content-wrap">
@@ -51,7 +51,7 @@
 
       <section class="projects">
         <div class="content-wrap">
-          <h1 class="centered">Web Development Projects</h1>
+          <h2 class="centered">Projects</h2>
           <!--<p>View selected projects below.</p>-->
 
           <!-- Copy the whole <section> block to add more projects. -->
@@ -70,7 +70,7 @@
           <br />
           <section class="project-item centered">
             <a style="height: 274px;">
-            <img src="website.jpg" alt="website in github" />
+            <img src="web.png" alt="website in github" />
             </a>
             <h3>Andres' Github Profile</h3>
             <p>
