added clustering project

--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
           <h3>Full Stack Software Developer - Machine Learning - Mechanical Engineer</h3>
           <div>
           <p class="centered">
-            As software developer, I specialize in creating front and back end applications. As Artificial Intelligence (AI) enthusiast I completed a Machine Learning and Data Science bootcamp. Now I am learning about AI for Business and Machine Learning for embedded systems. As engineer I am keen on improving designs and processes using computer tools and team collaboration. I devised this website with the goal of displaying past work, current projects and general information about myself in a more friendly way than a typical resume.
+            As software developer, I specialize in creating front end, back end and automation applications. Also, I completed a Machine Learning and Data Science bootcamp and now I am learning about Machine Learning for embedded systems including Deep Learning. As engineer I am keen on improving designs and processes using computational tools and team collaboration. I devised this website with the goal of displaying some of my past work, current projects and general information about myself in a more visual way than a typical resume.
           </p>
           </div>
           <div class="content-wrap">
@@ -51,7 +51,7 @@
 
       <section class="projects">
         <div class="content-wrap">
-          <h2 class="centered">Projects</h2>
+          <h2 class="centered">Web Projects</h2>
           <!--<p>View selected projects below.</p>-->
 
           <!-- Copy the whole <section> block to add more projects. -->
@@ -160,6 +160,20 @@
             <h3>Dog Breeds Classification</h3>
             <p>
               AI project using Transfer Learning / Deep Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds. Tools used included Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs.
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+          <!-- End of Project block. -->
+           <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item centered">
+            <a style="height: 181px;">
+            <img src="clustering.png" alt="anomalies" class="centered" />
+            </a>
+            <h3>Anomaly Detection Clustering</h3>
+            <p>
+              AI project using Unsupervised Learning to cluster sparsed data into groups. Tools used included Google Colab, K-Means, Numpy, Matplotlib, Seaborn and setting up GPUs for training, validating and testing.
             </p>
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
