added 3D design skills

--- a/index.html
+++ b/index.html
@@ -230,7 +230,7 @@
                     <li>Asana</li> 
                     <li>Jira</li>  
                     <li>Trello</li>
-
+                    <li>3D Design</li>
                   </ul>
                 </div>
         </div>
