--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <section class="profile">
         <div class="content-wrap">
           <h2>ABOUT</h2>
-          <h3>Full Stack Software Developer - Machine Learning - Mechanical Engineer</h3>
+          <h3>Data Science and Machine Learning Engineer</h3>
           <div>
           <p class="centered">
-            As software developer, I specialize in creating front end, back end and automation applications. Also, I completed a Machine Learning and Data Science bootcamp and now I am learning about Machine Learning for embedded systems including Deep Learning. As engineer I am keen on improving designs and processes using computational tools and team collaboration. I devised this website with the goal of displaying some of my past work, current projects and general information about myself in a more visual way than a typical resume.
+            As Data Science and Machine Learning Engineer I have learned and been exposed to multiple tools and algorithms which provide me with an extensive knowledge filled with options and possibilities within AI. As programmer I create applications with front and back end content. As mechanical engineer I am keen on improving designs and processes using computational tools and team collaboration. I devised this website with the goal of displaying some of my past work, current projects and general information about myself in a more visual way than a typical resume.
           </p>
           </div>
           <div class="content-wrap">
@@ -51,7 +51,54 @@
 
       <section class="projects">
         <div class="content-wrap">
-          <h2 class="centered">Web Projects</h2>
+        	<h2 class="centered">Machine Learning Projects</h2>
+          <!--<p>View selected projects below.</p>-->
+
+          <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item centered">
+            <a style="height: 181px;">
+            <img src="equipment.jpg" alt="bulldozer" class="centered" />
+            </a>
+            <h3>Sale Price Prediction - Regression</h3>
+            <p>
+              ML project to predict the future sale price of heavy construction machinery, given their characteristics and previous examples of how much similar equipment have been sold for in the past. Tools used included Anaconda, Jupyter Notebooks, Pandas, Numpy, Matplotlib and Scikit Learn. Prepared training, validation and test datasets.
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+          <!-- End of Project block. -->
+          <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item centered">
+            <a style="height: 181px;">
+            <img src="dogs.jpg" alt="breeds" class="centered" />
+            </a>
+            <h3>Dog Breeds Prediction - Classification</h3>
+            <p>
+              AI project using Transfer Learning / Deep Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds. Tools used included Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs.
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+          <!-- End of Project block. -->
+           <!-- Copy the whole <section> block to add more projects. -->
+          <section class="project-item centered">
+            <a style="height: 181px;">
+            <img src="clustering.png" alt="anomalies" class="centered" />
+            </a>
+            <h3>Anomaly Detection - Clustering</h3>
+            <p>
+              AI project using Unsupervised Learning to cluster sparsed data into groups. Tools used included Google Colab, K-Means, Numpy, Matplotlib, Seaborn and setting up GPUs for training, validating and testing.
+            </p>
+            <br/>
+            <!--<a href="#" target="_blank">View project / case study</a>-->
+          </section>
+          <br />
+
+
+
+          <h2 class="centered">Web Projects - Front and Back End</h2>
           <!--<p>View selected projects below.</p>-->
 
           <!-- Copy the whole <section> block to add more projects. -->
@@ -135,49 +182,8 @@
             <br/>
             <!--<a href="#" target="_blank">View project / case study</a>-->
           </section>
-           <h2 class="centered">Machine Learning Projects</h2>
-          <!--<p>View selected projects below.</p>-->
+           
 
-          <!-- Copy the whole <section> block to add more projects. -->
-          <section class="project-item centered">
-            <a style="height: 181px;">
-            <img src="equipment.jpg" alt="bulldozer" class="centered" />
-            </a>
-            <h3>Sale Price Regression</h3>
-            <p>
-              ML project to predict the future sale price of heavy construction machinery, given their characteristics and previous examples of how much similar equipment have been sold for in the past. Tools used included Anaconda, Jupyter Notebooks, Pandas, Numpy, Matplotlib and Scikit Learn. Prepared training, validation and test datasets.
-            </p>
-            <br/>
-            <!--<a href="#" target="_blank">View project / case study</a>-->
-          </section>
-          <br />
-          <!-- End of Project block. -->
-          <!-- Copy the whole <section> block to add more projects. -->
-          <section class="project-item centered">
-            <a style="height: 181px;">
-            <img src="dogs.jpg" alt="breeds" class="centered" />
-            </a>
-            <h3>Dog Breeds Classification</h3>
-            <p>
-              AI project using Transfer Learning / Deep Learning to Classify Different Dog Breeds within a dataset of 10,000+ images and 120 different classes or breeds. Tools used included Google Colab, TensorFlow 2.x, TensorFlow Hub, Pandas, Numpy, Matplotlib, Scikit Learn and setting up GPUs.
-            </p>
-            <br/>
-            <!--<a href="#" target="_blank">View project / case study</a>-->
-          </section>
-          <br />
-          <!-- End of Project block. -->
-           <!-- Copy the whole <section> block to add more projects. -->
-          <section class="project-item centered">
-            <a style="height: 181px;">
-            <img src="clustering.png" alt="anomalies" class="centered" />
-            </a>
-            <h3>Anomaly Detection Clustering</h3>
-            <p>
-              AI project using Unsupervised Learning to cluster sparsed data into groups. Tools used included Google Colab, K-Means, Numpy, Matplotlib, Seaborn and setting up GPUs for training, validating and testing.
-            </p>
-            <br/>
-            <!--<a href="#" target="_blank">View project / case study</a>-->
-          </section>
           <br />
           <!-- End of Project block. -->
         </div>
@@ -188,6 +194,18 @@
         <div class="content-wrap">
           <h2 class="centered">Skills</h2>
           <div class="container">
+                 <div>
+                  <ul class="section-flex">
+                    <li>Data Science / AI</li>
+                    <li>Python</li>
+                    <li>Machine Learning</li>
+                    <li>Scikit-Learn</li>
+                    <li>TensorFlow</li>
+                    <li>Deep Learning</li> 
+                    <li>CNN's</li>
+                    <li>Autoencoders</li>
+                  </ul>
+                </div>
                 <div>
                   <ul class="section-flex">
                     <li>Frontend</li>
@@ -195,41 +213,20 @@
                     <li>CSS3</li>
                     <li>JavaScript</li>
                     <li>React</li>
-                    <li>Express</li>
-                    <li>Nodejs</li>
                     <li>Backend</li>
-                    <li>NPM</li>
                     <li>SQL Server</li>
                     <li>PostgreSQL</li>
                   </ul>
                 </div>
                 <div>
                   <ul class="section-flex">
-                    <li>Data Science / AI</li>
-                    <li>Python</li>
-                    <li>Pandas</li>
-                    <li>Machine Learning</li>
-                    <li>TinyML</li>
-                    <li>Embedded Systems</li>
-                    <li>Matplotlib</li>
-                    <li>TensorFlow</li>
-                    <li>TensorFlow Lite</li>               
-                    <li>Scikit-Learn</li>
-                    <li>Google Colab</li>
-                  </ul>
-                </div>
-                <div>
-                  <ul class="section-flex">
                     <li>Github</li>
-                    <li>Responsive Design</li>
-                    <li>Flexbox</li>
-                    <li>Grid</li>
+                    <li>Responsive Designs</li>
+                    <li>Flexbox and Grid</li>
                     <li>API's</li>
-                    <li>CSS Animations</li>
-                    <li>Agile</li>
+                    <li>Agile Methodologies</li>
                     <li>Asana</li> 
                     <li>Jira</li>  
-                    <li>Trello</li>
                     <li>3D Design</li>
                   </ul>
                 </div>
@@ -296,18 +293,21 @@
           <h2 class="centered">Education</h2>
           <!-- Copy this whole <section> block to add more schools. -->
           <section>
-            <h3>University of Calgary</h3>
-            <p>Project Management Professional course, 2015</p>
-            <p>Master of Engineering, 2012</p>
+            <h3> edX / Udemy / Udacity</h3>
+            <p>Machine Learning and Data Science Bootcamp, 2020</p>
+            <p>Pyspark Crash Course, 2021</p>
+            <p>Ai in Business, 2021</p>
+            <p>TinyML, 2021</p>
+            <p>AWS Data Analytics Fundamentals, 2021</p>
           </section>
           <section>
             <h3>Bow Valley College - Calgary</h3>
             <p>Full Stack Software Development, 2020</p>
-            <p>Web development, C# Programming and Databases.</p>
           </section>
           <section>
-            <h3> edX / Udemy / Udacity</h3>
-            <p>HTML, CSS, Jira, Agile, Javascript, React, Machine Learning, Data Science, Ai in Business, TinyML</p>
+            <h3>University of Calgary</h3>
+            <p>Project Management Professional course, 2015</p>
+            <p>Master of Engineering, 2012</p>
           </section>
           <!-- End of School block. -->
         </div>
