--- a/index.html
+++ b/index.html
@@ -32,10 +32,10 @@
       <section class="profile">
         <div class="content-wrap">
           <h2>ABOUT</h2>
-          <h3>Data Science and Machine Learning Engineer</h3>
+          <h3>Machine Learning Engineer / Developer</h3>
           <div>
           <p class="centered">
-            As Data Science and Machine Learning Engineer I have learned and been exposed to multiple tools and algorithms which provide me with an extensive knowledge filled with options and possibilities within AI. As programmer I create applications with front and back end content. As mechanical engineer I am keen on improving designs and processes using computational tools and team collaboration. I devised this website with the goal of displaying some of my past work, current projects and general information about myself in a more visual way than a typical resume.
+            As a Machine Learning Engineer I have learned and been exposed to multiple tools and algorithms which provide me with an extensive knowledge filled with options and possibilities within AI. As a Developer I create applications with front and back end content. As an engineer I am keen on improving designs and processes using computational tools and team collaboration. I devised this website with the goal of displaying some of my past work, current projects and general information about myself in a more visual way than a typical resume.
           </p>
           </div>
           <div class="content-wrap">
